--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/react-select": "^1.2.0",
+    "clsx": "^1.2.1",
     "google-map-react": "^2.2.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.109.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
