--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-select": "^1.2.0",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "google-map-react": "^2.2.0",
     "localforage": "^1.10.0",
