--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.2",
+    "react-select": "^5.7.0",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "swiper": "^9.0.4",
     "vite-plugin-svgr": "^2.4.0",
