--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-select": "^1.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "google-map-react": "^2.2.0",
@@ -22,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.2",
     "react-select": "^5.7.0",
