--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.2",
     "react-select": "^5.7.0",
+    "react-spinners": "^0.13.8",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "swiper": "^9.0.5",
     "vite-plugin-svgr": "^2.4.0",
