--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "google-map-react": "^2.2.0",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.109.0",
     "match-sorter": "^6.3.1",
