--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-select": "^5.7.0",
     "react-spinners": "^0.13.8",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
+    "redux": "^4.2.1",
     "swiper": "^9.0.5",
     "vite-plugin-svgr": "^2.4.0",
     "yet-another-react-lightbox": "^2.3.0",
