--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.109.0",
     "match-sorter": "^6.3.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
