--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.0",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "class-variance-authority": "^0.5.2",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "google-map-react": "^2.2.0",
@@ -36,6 +38,8 @@
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
     "swiper": "^9.0.5",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "vite-plugin-svgr": "^2.4.0",
     "yet-another-react-lightbox": "^2.3.0",
     "yup": "^0.32.11"
