--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-select": "^1.2.0",
+    "@react-leaflet/core": "^2.1.0",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "class-variance-authority": "^0.5.2",
@@ -21,6 +22,7 @@
     "clsx": "^1.2.1",
     "google-map-react": "^2.2.0",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.3",
     "localforage": "^1.10.0",
     "lucide-react": "^0.109.0",
     "match-sorter": "^6.3.1",
@@ -29,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.2",
@@ -46,8 +49,10 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-leaflet": "^3.0.0",
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
