--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "swiper": "^9.0.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
+    "use-debounce": "^9.0.4",
     "vite-plugin-svgr": "^2.4.0",
     "yet-another-react-lightbox": "^2.3.0",
     "yup": "^0.32.11"
