feat: Switch the details map to Mapbox

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "leaflet": "^1.9.3",
     "localforage": "^1.10.0",
     "lucide-react": "^0.109.0",
+    "mapbox-gl": "^2.14.1",
     "match-sorter": "^6.3.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
@@ -34,6 +35,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-leaflet": "^4.2.1",
+    "react-map-gl": "^7.0.23",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.2",
