--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.5.2",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.12.4",
     "google-map-react": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
