--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "react-use": "^17.4.0",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.6.1",
     "swiper": "^9.0.5",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
