--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.5.2",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "framer-motion": "^10.12.4",
     "google-map-react": "^2.2.0",
     "jwt-decode": "^3.1.2",
