--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-map-gl": "^7.0.23",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.6.2",
